# ros_monitor

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  INSTALLATION.md  README.md  bt_log_20260617T174026.btlog.db3  bt_visualizer_plan.md  docker-compose.yml  implementation_plan.md  requirements.txt  walkthrough.md
backend/: bridge.py  test_btros_parse.py  test_run_modes.py  test_runtime.py
backend/ros_monitor_bridge/: __init__.py  bt_replay.py  bt_simulation.py  btros_bridge.py  config.py  main.py  pid_scanner.py  ros_bridge.py  runtime.py  server.py  simulation.py  utils.py
bt_demo/: CMakeLists.txt  README.md  main.cpp
deploy/systemd/: ros-monitor-dev.service
docker/: entrypoint.sh
docs/: README.md  bt_visualizer_plan.md  implementation_plan.md  logging_settings_plan.md
frontend/: app.js  bt_proto.html  index.html  style.css
frontend/js/: app.js  bt_proto.js  graph.js  inspector.js  interactions.js  scene.js  sidebar.js  simulation.js  state.js  visibility.js  websocket.js
frontend_new/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ros2_demo_ws/src/monitor_demo/: package.xml  setup.cfg  setup.py
ros2_demo_ws/src/monitor_demo/launch/: monitor_demo.launch.py
ros2_demo_ws/src/monitor_demo/monitor_demo/: control_node.py  fibonacci_action_client.py  fibonacci_action_server.py  math_client.py  math_service.py  node_utils.py  sensor_hub.py
scripts/: build_demo.sh  detect_ros.sh  gen_bt_fixture.py  pull_bt_logs.sh  run_demo.sh  run_visualizer.sh  run_visualizer_new.sh  run_with_watch.sh  setup_python_env.sh
(+50 files in other folders)
